--- a/package.json
+++ b/package.json
@@ -31,28 +31,28 @@
   "private": false,
   "peerDependencies": {},
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.0.1",
-    "@angular/animations": "^13.0.0",
-    "@angular/cli": "~13.0.1",
-    "@angular/common": "^13.0.0",
-    "@angular/compiler": "^13.0.0",
-    "@angular/compiler-cli": "^13.0.0",
-    "@angular/core": "^13.0.0",
-    "@angular/forms": "^13.0.0",
-    "@angular/language-service": "^13.0.0",
-    "@angular/platform-browser": "^13.0.0",
-    "@angular/platform-browser-dynamic": "^13.0.0",
-    "@angular/router": "^13.0.0",
+    "@angular-devkit/build-angular": "^14.2.13",
+    "@angular/animations": "^14.3.0",
+    "@angular/cli": "^14.2.13",
+    "@angular/common": "^14.3.0",
+    "@angular/compiler": "^14.3.0",
+    "@angular/compiler-cli": "^14.3.0",
+    "@angular/core": "^14.3.0",
+    "@angular/forms": "^14.3.0",
+    "@angular/language-service": "^14.3.0",
+    "@angular/platform-browser": "^14.3.0",
+    "@angular/platform-browser-dynamic": "^14.3.0",
+    "@angular/router": "^14.3.0",
     "@types/node": "^14.0.23",
     "browserslist": "^4.16.5",
     "codelyzer": "^6.0.0",
     "core-js": "^3.6.5",
-    "ng-packagr": "^13.0.2",
+    "ng-packagr": "^14.2.2",
     "rxjs": "^6.6.0",
     "ts-node": "~8.10.2",
     "tslib": "^2.3.1",
     "tslint": "~6.1.0",
-    "typescript": "4.4.4",
+    "typescript": "4.8.4",
     "zone.js": "~0.11.4"
   }
 }
