--- a/angular.json
+++ b/angular.json
@@ -59,18 +59,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ngx-webcam:build"
+            "buildTarget": "ngx-webcam:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ngx-webcam:build:production"
+              "buildTarget": "ngx-webcam:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ngx-webcam:build"
+            "buildTarget": "ngx-webcam:build"
           }
         }
       }
