--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "ngx-webcam",
-  "version": "0.4.2",
+  "version": "0.5.0",
   "author": "basst314",
   "contributors": [
-    "davidshen84"
+    "davidshen84", "neosis91"
   ],
   "license": "MIT",
   "repository": {
@@ -23,7 +23,6 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --configuration production",
-    "lint": "ng lint",
     "e2e": "ng e2e",
     "packagr": "ng-packagr -p ng-package.json",
     "docs": "npm run build -- --base-href /ngx-webcam/ --output-path docs"
@@ -51,7 +50,6 @@
     "rxjs": "^6.6.0",
     "ts-node": "~8.10.2",
     "tslib": "^2.3.1",
-    "tslint": "~6.1.0",
     "typescript": "5.4.5",
     "zone.js": "~0.14.10"
   }
