--- a/angular.json
+++ b/angular.json
@@ -72,6 +72,15 @@
           "options": {
             "buildTarget": "ngx-webcam:build"
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
+          }
         }
       }
     },
