--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.5.0",
   "author": "basst314",
   "contributors": [
-    "davidshen84", "neosis91"
+    "davidshen84",
+    "neosis91"
   ],
   "license": "MIT",
   "repository": {
@@ -25,7 +26,8 @@
     "build": "ng build --configuration production",
     "e2e": "ng e2e",
     "packagr": "ng-packagr -p ng-package.json",
-    "docs": "npm run build -- --base-href /ngx-webcam/ --output-path docs"
+    "docs": "npm run build -- --base-href /ngx-webcam/ --output-path docs",
+    "lint": "ng lint"
   },
   "private": false,
   "peerDependencies": {},
@@ -43,14 +45,17 @@
     "@angular/platform-browser-dynamic": "^18.2.13",
     "@angular/router": "^18.2.13",
     "@types/node": "^14.0.23",
+    "angular-eslint": "18.4.3",
     "browserslist": "^4.16.5",
     "codelyzer": "^6.0.0",
     "core-js": "^3.6.5",
+    "eslint": "^9.15.0",
     "ng-packagr": "^18.2.1",
     "rxjs": "^6.6.0",
     "ts-node": "~8.10.2",
     "tslib": "^2.3.1",
     "typescript": "5.4.5",
+    "typescript-eslint": "8.16.0",
     "zone.js": "~0.14.10"
   }
 }
