--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "lint": "ng lint"
   },
   "private": false,
-  "peerDependencies": {},
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.12",
     "@angular/animations": "^18.2.13",
@@ -46,12 +45,15 @@
     "@angular/router": "^18.2.13",
     "@types/node": "^14.0.23",
     "angular-eslint": "18.4.3",
+    "autoprefixer": "^10.4.20",
     "browserslist": "^4.16.5",
     "codelyzer": "^6.0.0",
     "core-js": "^3.6.5",
     "eslint": "^9.15.0",
     "ng-packagr": "^18.2.1",
+    "postcss": "^8.4.49",
     "rxjs": "^6.6.0",
+    "tailwindcss": "^3.4.16",
     "ts-node": "~8.10.2",
     "tslib": "^2.3.1",
     "typescript": "5.4.5",
