--- a/angular.json
+++ b/angular.json
@@ -15,9 +15,10 @@
               "base": "dist"
             },
             "index": "src/index.html",
-            "tsConfig": "src/tsconfig.app.json",
+            "tsConfig": "tsconfig.app.json",
             "polyfills": [
-              "zone.js"
+              "zone.js",
+              "zone.js/testing"
             ],
             "assets": [
               "src/assets",
