--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,12 +1,12 @@
 {
-  "extends": "../tsconfig.json",
+  "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../out-tsc/app",
     "baseUrl": "./",
     "types": []
   },
   "files": [
-    "main.ts"
+    "src/main.ts"
   ],
   "include": [
     "src/**/*.d.ts"
