--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -1,13 +1,16 @@
 {
-  "extends": "../tsconfig.json",
+  "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../out-tsc/spec",
     "baseUrl": "./",
     "types": [
-      "node"
+      "node",
+      "jest"
     ]
   },
-  "files": [],
+  "files": [
+    "setup-jest.ts"
+  ],
   "include": [
     "**/*.spec.ts"
   ]
